--- a/lab1/contacts.html
+++ b/lab1/contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel='stylesheet' href='style.css'>
+        <link rel='stylesheet' href='contacts.css'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
@@ -14,11 +14,38 @@
                 <img class="logo" src="logo.jpg" alt="">
             </div>
             <div class="nav-bar">
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/main.html">ГЛАВНАЯ</a>
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/rezume.html">РЕЗЮМЕ</a>
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/contacts.html">КОНТАКТЫ</a>
+                <a class="nav-item" href="main.html">ГЛАВНАЯ</a>
+                <a class="nav-item" href="rezume.html">РЕЗЮМЕ</a>
+                <a class="nav-item" href="contacts.html">КОНТАКТЫ</a>
             </div>
-            
+            <div class="git">
+                <div class="title">
+                    <img class="logot" src="github-mark-white.png" alt="">
+                    <a class="link" href="https://github.com/kksseonn">Github</a>
+                </div>
+                <p class="opt">Здесь вы найдете мои работы</p>
+            </div>
+            <div class="dis">
+                <div class="title">
+                    <img class="logot" src="dis.png" alt="">
+                    <a class="link" href="https://discord.com/users/kksseonn">Discord</a>
+                </div>
+                <p class="opt">Здесь вы сможете связаться со мной</p>
+            </div>
+            <div class="tel">
+                <div class="title">
+                    <img class="logot" src="tel.png" alt="">
+                    <a class="link" href="https://t.me/kksseonn">Telegram</a>
+                </div>
+                <p class="opt">Здесь вы сможете экстренно связаться со мной</p>
+            </div>
+            <div class="pho">
+                <div class="title">
+                    <img class="logot" src="pho.png" alt="">
+                    <a class="link">89276933144</a>
+                </div>
+                <p class="opt">Не рекомендую этот способ связи...</p>
+            </div>
           </div>
     </body>
 </html>
