--- a/lab1/main.html
+++ b/lab1/main.html
@@ -14,9 +14,9 @@
                 <img class="logo" src="logo.jpg" alt="">
             </div>
             <div class="nav-bar">
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/main.html">ГЛАВНАЯ</a>
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/rezume.html">РЕЗЮМЕ</a>
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/contacts.html">КОНТАКТЫ</a>
+                <a class="nav-item" href="main.html">ГЛАВНАЯ</a>
+                <a class="nav-item" href="rezume.html">РЕЗЮМЕ</a>
+                <a class="nav-item" href="contacts.html">КОНТАКТЫ</a>
             </div>
             <div class="sidebar">
                 <img class="hero-img" src="hero.jpg">
