--- a/lab1/rezume.html
+++ b/lab1/rezume.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel='stylesheet' href='style.css'>
+        <link rel='stylesheet' href='rezume.css'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
-        <title>Spiridonova</title>
+        <title>Rezume</title>
     </head>
     <body>
         <div class="wrapper">
@@ -14,10 +14,44 @@
                 <img class="logo" src="logo.jpg" alt="">
             </div>
             <div class="nav-bar">
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/main.html">ГЛАВНАЯ</a>
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/rezume.html">РЕЗЮМЕ</a>
-                <a class="nav-item" href="C:/Users/STNK/Desktop/VEB/lab1/contacts.html">КОНТАКТЫ</a>
+                <a class="nav-item" href="main.html">ГЛАВНАЯ</a>
+                <a class="nav-item" href="rezume.html">РЕЗЮМЕ</a>
+                <a class="nav-item" href="contacts.html">КОНТАКТЫ</a>
             </div>
-          </div>
+            <div class="job">
+                <p class="title">Опыт работы:</p>
+                <p class="job-list">Мой профессиональный путь находится еще в стадии становления, и я готова с огромным энтузиазмом вложить все свои усилия в учебу и развитие на пути к достижению целей компании.</p>
+            </div>
+            <div class="photo">
+                <img class="photo-img" src="hero.jpg">
+            </div>
+            <div class="education">
+                <p class="title">Образование:</p>
+                <ul class="education-list">
+                    <li><em class="year">2011-2015</em>: 1-4 класс, ГБОУ СОШ № 19 имени Героя России А.Кириллина, г. Сызрань </li>
+                    <li><em class="year">2015-2018</em>: 5-7 класс, МАОУ "Медико-биологический лицей", г. Саратов</li>
+                    <li><em class="year">2018-2020</em>: 8-9 класс, ГБОУ СОШ № 19 имени Героя России А.Кириллина, г. Сызрань</li>
+                    <li><em class="year">2020-2022</em>: 10-11 класс, ГБОУ лицей имени Героя Советского Союза П. И. Викулова, г.Сызрань</li>
+                    <li><em class="year">2022-2028</em>: Самарский государственный аэрокосмический университет имени академика С. П. Королёва,Направление подготовки:Информационная безопасность автоматизированных систем
+                        Профиль:Специализация № 5 "Безопасность открытых информационных систем"</li>
+                </ul>
+            </div>
+            <div class="me">
+                <p class="title">Обо мне:</p>
+                <ul class="education-list">
+                    <li>Стремлюсь к достижению высоких результатов и к профессиональному развитию.</li>
+                    <li>Имею творческий подход к решению задач, умение мыслить стратегически и принимать ответственность за принятые решения.</li>
+                    <li>Легко адаптируюсь в коллективе и успешно взаимодействую с клиентами/коллегами.</li>
+                </ul>
+            </div>
+            <div class="skills">
+                <p class="title">Навыки:</p>
+                <ul class="education-list">
+                    <li>Стремлюсь к достижению высоких результатов и к профессиональному развитию.</li>
+                    <li>Имею творческий подход к решению задач, умение мыслить стратегически и принимать ответственность за принятые решения.</li>
+                    <li>Легко адаптируюсь в коллективе и успешно взаимодействую с клиентами/коллегами.</li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
